--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hl7v2",
+  "name": "@aleris/hl7v2",
   "description": "HL7 v2 parser, serializer, validator and tcp client/server for NodeJS",
   "version": "0.9.0",
   "author": "Panates Ltd.",
